# server/Service/Services/Interfaces/IBoardService.cs
@@ -7,5 +7,5 @@ public interface IBoardService
 {
     public BoardResponseDTO PlayBoard(PlayBoardDTO playBoardDTO);
     public List<BoardResponseDTO> GetBoards();
-    public List<BoardResponseDTO> GetBoardsFromGame(Guid gameId);
+    public List<BoardGameResponseDTO> GetBoardsFromGame(Guid gameId);
 }
